=======
Changes
=======

3.5.3 (Unreleased)
==================

- ...

3.5.2a1 (2008-10-23)
====================

- Added a hook to specify a different BaseURL for resources. This makes sense
  if you want to put resources on a Content Delivery Network. All you need to
  do is to register an named Adapter 'resource' that implements IAbsoluteURL.

3.5.1 (2008-10-13)
==================

- Removed usage of deprecated LayerField from zope.app.component.back35.

3.5.0 (2008-08-05)
==================

- Refactored code to provide more hooks when deriving code from this pacakge.

  * A resource's URL creation is now in its own method.

  * The resource class of factories can be overwritten.

  * The cache timeout value can now be set as a class or instance attribute.

3.5.0a4 (2007-12-28)
====================

- Backed out the changes for the controversial XML-RPC skin support.

3.5.0a3 (2007-11-27)
====================

- make it possible to override menus: this was not possible because new
  interfaces where created any time a menu with the same name was created.

- Resolve ``ZopeSecurityPolicy`` deprecation warning.

3.5.0a2 (2007-08-23)
====================

- <browser:defaultView> now accepts classes as well as interfaces.

3.5.0a1 (2007-08-21)
====================

- Added a `layer` attribute to `xmlrpc:view`. This works just like layers for
  `browser:view` etc. but uses the `IXMLRPCSkinType`.